fixed clear command