@@ -31,7 +31,8 @@ public class SirupCli {
             if (System.getProperty("os.name").contains("Windows"))
                 new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             else
-                Runtime.getRuntime().exec("clear");
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
+                //Runtime.getRuntime().exec("clear");
         }
         catch (IOException | InterruptedException ignored) {}
     }
